# whatsapp-command-center

./: .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  config.js  index.html  main.js  package-lock.json  package.json  pin-preload.js  pin-validation.html  preload.js  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.6.md  renderer.js  settings-preload.js  settings.html  styles.css
.cursor/rules/: github.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  desktop-build.yml
desktop/: index.html
docs/superpowers/plans/: 2026-07-05-tauri-self-contained-desktop.md
docs/superpowers/specs/: 2026-07-05-tauri-self-contained-desktop-design.md
icons/icons/mac/: icon.icns
scripts/: check-js.js  desktop-build.js  prepare-tauri-sidecar.js
src/: app-runtime.js  config-store.js  dashboard-server.js  desktop-sidecar.js  index.js  whatsapp.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: app-runtime.test.js  config-store.test.js  dashboard-server.test.js  desktop-launcher.test.js  github-workflow.test.js  onboarding-routes.test.js  package-scripts.test.js  tauri-sidecar.test.js  whatsapp-message.test.js
